# uniqhash

./: .gitignore  Main.hs  Makefile  README.md  Uniqhash.hs  stack.yaml  uniqhash.cabal  uniqhash.hs
Data/Machine/: MealyM.hs
Test/Properties/: AutoMealyM.hs  UniqhashMachines.hs
Test/Scripts/: Needle.hs
Text/: Uniqhash.hs  UniqhashC.hs  UniqhashConduit.hs  UniqhashLazyIO.hs  UniqhashMachines.hs  UniqhashStreaming.hs
