name:                uniqhash
version:             1.1.0.0
synopsis:            Filter for lines of filenames on STDIN - Show only changed files
homepage:            https://github.com/sordina/uniqhash
license:             MIT
license-file:        LICENSE
author:              Lyndon Maydwell
maintainer:          lyndon@sordina.net
category:            System
build-type:          Simple
cabal-version:       >=1.8
description:
  Uniqhash comes in two forms - A library and an executable.
  .
  * Executable
  .
  Filter a list of filenames based on if their contents have changed.
  .
  From the commandline the program is used like so:
  .
  > $OUTPUTTER | uniqhash
  .
  This will take in lines of filenames from $OUTPUTTER as the arrive, and check that
  the contents of the file in question have changed since it was last seen.
  If they have, then the filename will be printed to STDOUT.
  .
  For example, the following will output lists of files that have changed every second:
  .
  > (while 1; do ls -p | grep -v '/'; done) | grep --line-buffered -v '~' | uniqhash
  .
  * Library
  .
  To use the library just
  .
  > import Text.Uniqhash
  .
  See the `Text.Uniqhash` module documentation for more details.

library
  exposed-modules: Text.Uniqhash
  build-depends: base ==4.6.*, containers >= 0.5, bytestring >= 0.10, nano-md5 >= 0.1

executable uniqhash
  main-is: Uniqhash.hs
  build-depends: base ==4.6.*, containers >= 0.5, bytestring >= 0.10, nano-md5 >= 0.1
